src/App.css
@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");

body {
  background: white;
}
.main-card {
  width: 1040px;
  height: 687px;
  margin: auto;
  margin-top: 6%;
  background: rgba(196, 196, 196, 0.18);
  border-radius: 19px;
}

.title {
  padding-top: 3%;
  padding-bottom: 1%;
  font-family: "Righteous";
  font-style: normal;
  font-weight: normal;
  font-size: 64px;
}

.search-card {
  background: #f2f2f2;
  width: 100%;
  height: 100%;
  padding-bottom: 2%;
  margin: auto;
  box-shadow: 0px 4px 4px rgba(103, 103, 103, 0.25);
  border-radius: 19px;
}

.search-title {
  font-family: "Righteous";
  font-style: normal;
  font-weight: normal;
  font-size: 24px;
  line-height: 30px;
  color: #868686;
}

#search-bar {
  width: 85%;
  min-height: 50px;
  background: #ffffff;
  border-radius: 19px;
}

.search-button {
  height: 50px;
  margin-left: 1%;
  background: #ffffff;
  border-radius: 19px;
  color: black;
  border: 1px solid #ced4d9;
}

.results-card {
  width: 100%;
  max-height: 328px;
  padding-bottom: 8%;
  overflow-y: scroll;
  overflow-x: hidden;
  background: #f2f2f2;
  box-shadow: 0px 4px 4px rgba(103, 103, 103, 0.25);
  border-radius: 19px;
}

.nominations-card {
  width: 100%;
  max-height: 328px;
  padding-bottom: 8%;
  overflow-y: scroll;

  overflow-x: hidden;
  background: #f2f2f2;
  box-shadow: 0px 4px 4px rgba(103, 103, 103, 0.25);
  border-radius: 19px;
}

.results-nominations-heading {
  width: 80%;
  margin: auto;
  font-family: "Righteous";
  font-style: normal;
  font-weight: normal;
  font-size: 20px;
  padding-top: 2%;
  padding-bottom: 5%;
}

.nominate-remove-btn {
  margin: auto;
  background: #ffffff;
  border-radius: 19px;
  color: black;
  border: 1px solid #ced4d9;
}

